# mcp-federated-catalog

./: Cargo.toml  README.md
src/: catalog.rs  lib.rs  main.rs  merge.rs
tests/: ac1_merge_disjoint.rs  ac2_conflict_priority.rs  ac3_conflict_suffix.rs  ac4_binder_compat.rs  ac5_concurrent.rs  ac6_partial_failure.rs
tests/fixtures/: cluster-a.json  cluster-b.json  registry.toml
