[package]
name = "mcp-federated-catalog"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Merge describe_model responses from N AtScale clusters into a unified federated catalog"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeyen-atscale/mcp-federated-catalog"
keywords = ["semantic-layer", "olap", "federation", "catalog", "atscale"]
categories = ["command-line-utilities", "data-structures"]

[[bin]]
name = "mcp-federated-catalog"
path = "src/main.rs"

[dependencies]
mcp-cluster-registry = { path = "../mcp-cluster-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
